added votes (meneos) and pending news feed

--- a/res/layout/channel_item_row_selected_favorite.xml
+++ b/res/layout/channel_item_row_selected_favorite.xml
@@ -3,11 +3,21 @@
 				android:layout_width="match_parent" 
 				android:layout_height="match_parent" 
 				android:orientation="vertical">
-	<TextView 
+	<LinearLayout
+				android:layout_width="match_parent" 
+				android:layout_height="wrap_content" 
+				android:orientation="horizontal">
+		<TextView 
+				android:id="@+id/votes"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				style="@style/item_selected_votes"/>
+		<TextView 
 				android:id="@+id/title"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				style="@style/item_selected_title"/>
+	</LinearLayout>
 	<LinearLayout
 				android:layout_width="match_parent" 
 				android:layout_height="wrap_content" 
