--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -43,6 +43,14 @@
 			    android:divider="@color/main_color"
 			    android:dividerHeight="1dp"
 			    android:cacheColorHint="#00000000"/>
+            <ListView
+            	android:id="@+id/feedpendienteslist"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:choiceMode="singleChoice"
+			    android:divider="@color/main_color"
+			    android:dividerHeight="1dp"
+			    android:cacheColorHint="#00000000"/>
 			<ListView
             	android:id="@+id/favoritelist"
 			    android:layout_width="match_parent"
